api service is added

--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -6,7 +6,7 @@
   "Favourites": "محادثات مثبتة",
   "Settings": "الاعدادات",
   "Add_person": "اضافة شخص",
-  "Name": "الاسم",
+  "Name": "الاسم او رقم الهاتف",
   "Send": "ارسال",
   "Write_your_message_here": "اكتب رسالتك هنا....",
   "Change_Theme": "تغيير المظهر",
