--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -8,7 +8,7 @@
   "Favourites": "Pin Conversation",
   "Settings": "Settings",
   "Add_person": "Add Person",
-  "Name": "Name",
+  "Name": "Name or Phone Number",
   "Send": "Send",
   "Write_your_message_here": "Write your message here....",
   "Change_Theme": "Change Theme",
